--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -263,7 +263,6 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   font-size: 14px;
-  line-height: 20px;
 }
 
 img {
@@ -3063,12 +3062,27 @@ textarea.w-select {
 }
 
 #playButton {
-  padding: 10px 20px;
-  background-color: #F39C12;
-  color: white;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  padding: 0;
   border: none;
+  background: none;
   cursor: pointer;
-  font-size: 16px;
+}
+
+#playButton img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.3s;
+}
+
+#playButton .hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .additional-box {
@@ -3077,6 +3091,18 @@ textarea.w-select {
   /* Light grey background */
   padding: 20px;
   box-sizing: border-box;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.question-box {
+  flex-grow: 1;
+  background-color: #e0e0e0;
+  /* Light grey background */
+  padding: 20px;
+  box-sizing: border-box;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 .text-block-14 {
